# AugmentedQuill

./: .eslintrc.js  .gitignore  Dockerfile  INSTALL.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: build-docker.yml  build-electron.yml  build-pyinstaller.yml  code-quality.yml  create-release.yml
.junie/: guidelines.md
app/: config.py  llm.py  llm_shims.py  main.py  projects.py  prompts_defaults.json
app/api/: chapters.py  chat.py  debug.py  http_responses.py  projects.py  settings.py  sourcebook.py  story.py
app/core/: config.py  prompts.py
app/helpers/: chapter_helpers.py  chapters_api_ops.py  chat_api_proxy_ops.py  chat_api_session_ops.py  chat_api_stream_ops.py  project_chapter_ops.py  project_helpers.py  project_lifecycle_ops.py  project_story_ops.py  project_structure_ops.py  sourcebook_helpers.py  story_api_prompt_ops.py  story_api_state_ops.py  story_api_stream_ops.py  story_helpers.py  stream_helpers.py
app/models/: chapters.py  chat.py  projects.py
app/utils/: image_helpers.py
config/: projects.json
doc/: ARCHITECTURE.md  ORGANIZATION.md
docs/: ARCHITECTURE.md  REFACTOR_TODO.md
electron/: package.json
frontend/: App.tsx  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
static/: style.css
templates/: base.html  index.html  settings.html
tests/: conftest.py
tools/: check_copyright.py  debug_search.py  enforce_code_hygiene.py  test_accept_continuation.js  test_mock_setup.py  verify_chat_tools.py
(+279 files in other folders)
